applications/platform/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: minio-console
  namespace: minio
spec:
  rules:
  - host: minio-console.happylittlecloud.ca
    http:
      paths:
      - backend:
          service:
            name: minio-gateway
            port:
              number: 9001
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - minio-console.happylittlecloud.ca
    secretName: minio-console-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: minio-api
  namespace: minio
spec:
  rules:
  - host: minio-api.happylittlecloud.ca
    http:
      paths:
      - backend:
          service:
            name: minio-gateway
            port:
              number: 9000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - minio-api.happylittlecloud.ca
    secretName: minio-api-tls
